# lightmail

./: package.json  pnpm-lock.yaml  tailwind.config.js
src/: App.css  App.tsx
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/src/: main.rs  types.rs
src-tauri/src/fetch/: fetch.rs  list.rs  mod.rs
src-tauri/src/login/: login.rs
src/components/: Folder.tsx  MailList.tsx  MailPreview.tsx
src/components/Login/: Account.tsx  IMAP.tsx  Loading.tsx  SMTP.tsx  index.tsx
src/context/: index.ts  reducer.ts  state.ts
src/utils/: types.ts
