[package]
name = "lightmail"
version = "1.0.0"
description = "a light mail client"
authors = ["justforlxz"]
license = "FUCK"
repository = ""
edition = "2021"
rust-version = "1.74.0"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[build-dependencies]
tauri-build = { version = "1.4", features = [] }

[dependencies]
tauri = { version = "1.4", features = ["macos-private-api", "shell-open"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
window-vibrancy = "0.4.0"
imap = { version = "3.0.0-alpha.11" }
imap-types = "1.0.0"
mail-parser = "0.9.1"
charset = "0.1.3"
utf7-imap = "0.3.2"

[features]
# this feature is used for production builds or when `devPath` points to the filesystem
# DO NOT REMOVE!!
custom-protocol = ["tauri/custom-protocol"]
